|
Quick Lists
|
|
Bug ID:
|
6614330
|
|
Votes
|
0
|
|
Synopsis
|
Node::dump(n) does not print full node's graph for specified depth.
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02),
6u5p(b01) (Bug ID:2172227)
, 6u14(b01) (Bug ID:2174809)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6670459
|
|
Submit Date
|
08-OCT-2007
|
|
Description
|
dump(4) print graph of depth 3 only for first input (idx=79).
It print nothing for the second input (idx=77) except the input node.
[ xxxxx@xxxxx xxxxx@xxxxx ]: print root()->find(82)->dump(4)
70 CatchProj === 69 [[ 78 ]] # xxxxx@xxxxx -1 !jvms: expr18501::run @ bci:8
81 MergeMem === _ 1 75 1 50 50 [[ 78 ]] { - N50:javasoft/sqe/tests/lang/expr185/expr18501/expr18501+16 * N50:javasoft/sqe/tests/lang/expr185/expr18501/expr18501+24 * } Memory: @BotPTR *+bot, idx=Bot; !jvms: expr18501::run @ bci:8
77 Proj === 65 [[ 78 82 ]] #5 !jvms: expr18501::run @ bci:8
78 Initialize === 70 1 81 1 1 77 [[ 79 80 ]] !jvms: expr18501::run @ bci:8
79 Proj === 78 [[ 90 82 ]] #0 !jvms: expr18501::run @ bci:8
82 CheckCastPP === 79 77 [[ 181 159 90 90 174 121 112 121 123 ]] #javasoft/sqe/tests/lang/expr185/expr18501/expr18501:NotNull:exact * Oop:javasoft/sqe/tests/lang/expr185/expr18501/expr18501:NotNull:exact * !jvms: expr18501::run @ bci:8
Posted Date : 2007-10-08 22:15:43.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
A node is not processed if it was visited during processing previous inputs.
Posted Date : 2007-10-08 22:15:43.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |