6614330: Node::dump(n) does not print full graph for specified depth

A node is not processed in dump_nodes() if it was visited during processing previous inputs.

Reviewed-by: rasbold